erDiagram
    db_metadata {
        TEXT key PK
        TEXT value "NOT NULL"
    }

    companies {
        TEXT id PK
        TEXT name
        TEXT company_color "hex default #3a9200"
        TEXT station_number_style "default jreast"
    }

    lines {
        TEXT id PK
        TEXT name "NOT NULL"
        TEXT line_color "NOT NULL - hex default #8cc800"
        TEXT prefix "NOT NULL - e.g. JY"
        INTEGER priority
        INTEGER is_loop "0 or 1 default 0"
    }

    stations {
        TEXT id PK
        TEXT primary_name "NOT NULL DEFAULT empty"
        TEXT primary_name_furigana "For furigana"
        TEXT secondary_name "For English in default"
        TEXT tertiary_name "For Korean in default"
        TEXT quaternary_name "For Chinese in default"
        TEXT quinary_name
        TEXT note
        TEXT three_letter_code
        INTEGER sort_order
    }

    station_lines {
        TEXT id PK
        TEXT station_id FK "NOT NULL - stations.id CASCADE"
        TEXT line_id FK "NOT NULL - lines.id CASCADE"
        INTEGER sort_order "display order default 0"
    }

    station_numbers {
        TEXT id PK
        TEXT station_id FK "NOT NULL - CASCADE"
        TEXT line_id FK "NOT NULL"
        TEXT value "NOT NULL - e.g. JY26, 5A"
    }

    special_zones {
        TEXT id PK
        TEXT name "NOT NULL - e.g. 山手線内"
        TEXT abbreviation "NOT NULL - single char e.g. 山"
        INTEGER is_black "0=white fill 1=black fill default 0"
    }

    station_areas {
        TEXT id PK
        TEXT station_id FK "NOT NULL - CASCADE"
        TEXT zone_id FK "NOT NULL - special_zones.id CASCADE"
        INTEGER sort_order "display order default 0"
    }

    current_sign_configurations {
        TEXT id PK
        TEXT station_id FK "NOT NULL - stations.id"
        REAL ratio "canvas ratio default 4.5"
        TEXT direction "left right both default left"
        TEXT sign_style "e.g. jreast"
    }

    services {
        TEXT id PK
        TEXT line_id FK "NOT NULL - lines.id CASCADE"
        TEXT name "NOT NULL - e.g. 普通, 快速"
        TEXT color "hex default #8cc800"
        INTEGER sort_order "default 0"
    }

    station_service_stops {
        TEXT id PK
        TEXT station_id FK "NOT NULL - stations.id CASCADE"
        TEXT service_id FK "NOT NULL - services.id CASCADE"
        TEXT status "stop or special default stop"
    }

    companies |o--o{ lines : "has lines"
    lines ||--o{ station_lines : "belongs to"
    stations ||--o{ station_lines : "serves"
    station_lines ||--o{ station_numbers : "has numbers"
    special_zones ||--o{ station_areas : "defines badge"
    stations ||--o{ station_areas : "has area badges"
    stations ||--o| current_sign_configurations : "is configured as"
    lines ||--o{ services : "has services"
    services ||--o{ station_service_stops : "defines stops"
    stations ||--o{ station_service_stops : "has stop status"
